tests/invalidTest/other/const_const_unvalid_type16_2.q
# EXPECT type cannot be converted
def void errorType(){
    uint16 a = 65537
}